Display number of coins transacted
